(PC-35489)[PRO] feat: fix horizontal scroll in adage

--- a/pro/src/pages/AdageIframe/app/components/AppLayout/AppLayout.module.scss
+++ b/pro/src/pages/AdageIframe/app/components/AppLayout/AppLayout.module.scss
@@ -3,6 +3,7 @@
 
 .app-layout {
   container: adage / inline-size;
+  overflow-x: hidden;
 }
 
 .app-layout-content {
